versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/EnergyAngular.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalEnergyAngular
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function EnergyAngularDefaultConst() &
      bind(C, name='EnergyAngularDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function EnergyAngularDefaultConst

!! Create, default
function EnergyAngularDefault() &
      bind(C, name='EnergyAngularDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function EnergyAngularDefault

!! Create, general, const
function EnergyAngularCreateConst( &
   label, &
   productFrame, &
   XYs3d, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='EnergyAngularCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: XYs3d
   type(c_ptr) :: handle
end function EnergyAngularCreateConst

!! Create, general
function EnergyAngularCreate( &
   label, &
   productFrame, &
   XYs3d, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='EnergyAngularCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: XYs3d
   type(c_ptr) :: handle
end function EnergyAngularCreate

!! Assign
subroutine EnergyAngularAssign(handleLHS, handleRHS) &
      bind(C, name='EnergyAngularAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine EnergyAngularAssign

!! Delete
subroutine EnergyAngularDelete(handle) &
      bind(C, name='EnergyAngularDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine EnergyAngularDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function EnergyAngularRead(handle, filename, filenameSize) &
      bind(C, name='EnergyAngularRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function EnergyAngularRead

!! Write to file
function EnergyAngularWrite(handle, filename, filenameSize) &
      bind(C, name='EnergyAngularWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function EnergyAngularWrite

!! Print to standard output, in our prettyprinting format
function EnergyAngularPrint(handle) &
      bind(C, name='EnergyAngularPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function EnergyAngularPrint

!! Print to standard output, as XML
function EnergyAngularPrintXML(handle) &
      bind(C, name='EnergyAngularPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function EnergyAngularPrintXML

!! Print to standard output, as JSON
function EnergyAngularPrintJSON(handle) &
      bind(C, name='EnergyAngularPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function EnergyAngularPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: label
!! -----------------------------------------------------------------------------

!! Has
function EnergyAngularLabelHas(handle) &
      bind(C, name='EnergyAngularLabelHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyAngularLabelHas

!! Get
function EnergyAngularLabelGet(handle) &
      bind(C, name='EnergyAngularLabelGet') &
      result(label)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: label
end function EnergyAngularLabelGet

!! Set
subroutine EnergyAngularLabelSet(handle, label, labelSize) &
      bind(C, name='EnergyAngularLabelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
end subroutine EnergyAngularLabelSet


!! -----------------------------------------------------------------------------
!! Metadatum: productFrame
!! -----------------------------------------------------------------------------

!! Has
function EnergyAngularProductFrameHas(handle) &
      bind(C, name='EnergyAngularProductFrameHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyAngularProductFrameHas

!! Get
function EnergyAngularProductFrameGet(handle) &
      bind(C, name='EnergyAngularProductFrameGet') &
      result(productFrame)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: productFrame
end function EnergyAngularProductFrameGet

!! Set
subroutine EnergyAngularProductFrameSet(handle, productFrame, productFrameSize) &
      bind(C, name='EnergyAngularProductFrameSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
end subroutine EnergyAngularProductFrameSet


!! -----------------------------------------------------------------------------
!! Child: XYs3d
!! -----------------------------------------------------------------------------

!! Has
function EnergyAngularXYs3dHas(handle) &
      bind(C, name='EnergyAngularXYs3dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyAngularXYs3dHas

!! Get, const
function EnergyAngularXYs3dGetConst(handle) &
      bind(C, name='EnergyAngularXYs3dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyAngularXYs3dGetConst

!! Get
function EnergyAngularXYs3dGet(handle) &
      bind(C, name='EnergyAngularXYs3dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyAngularXYs3dGet

!! Set
subroutine EnergyAngularXYs3dSet(handle, fieldHandle) &
      bind(C, name='EnergyAngularXYs3dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyAngularXYs3dSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalEnergyAngular
